--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
 <p>Not everyone has the time to read the full 10,000-word plan, so here are some of the highlights:</p>
 
 <ul>
-    <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a price limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades, including electrification.</li>
+    <li>Create a PBS-like system that regulates everday costs down when profit margins are too high, or negotiates a price limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades, including electrification.</li>
     <li>Regulate against the destruction of our beautiful homes, gardens, surroundings and environment, and blocking out of views of nature by lower quality housing.</li>
     <li>Make our algae science independent from polluting industries and political bias. Currently there are conflicts of interest.</li>
     <li>Upgrade public transport with electrification and increase the number and frequency of services.</li>
-    <li>Oppose new wasteful spending by political parties like Labor's $285 million failed hydrogen project and more.</li>
-    <li>Use State Parliament to call out the federal government on all of their failures, including indadequate funding for the states, extreme growth, pollution and rising prices</li>
+    <li>Oppose new wasteful spending by political parties like Labor's $285 million failed hydrogen project. Get the priorities right.</li>
+    <li>Use State Parliament to call out the federal government on all of their failures, including indadequate funding for the states, extreme growth, pollution and rising prices, and advocate for central bank reform</li>
 </ul>
 
 <p>Even better though, I have a plan to make parliament more competent at both state and federal levels, and I need your help.</p>
