--- a/party_comparison_A6.html
+++ b/party_comparison_A6.html
@@ -43,7 +43,7 @@
             margin-bottom: 2px;
         }
 
-        .logo-row img { height: 42px; width: auto; max-width: 80px; object-fit: contain; }
+        .logo-row img { height: 33px; width: auto; max-width: 80px; object-fit: contain; }
         
         /* Bigger Red X */
         .icon-x { stroke: #d32f2f; width: 45px; height: 45px; flex-shrink: 0; }
@@ -108,7 +108,7 @@
                 <img src="images/AustralianGreensLogo_official_1920x1665.svg.png" alt="Greens">
                 <svg class="icon-x" viewBox="0 0 24 24" fill="none" stroke-width="4"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
             </div>
-            <p>Destructive, unsustainable, expensive growth</p>
+            <p>Destructive, unsustainable, expensive and out-of-control growth and prices</p>
         </div>
 
         <!-- Section 2 -->
@@ -121,8 +121,7 @@
                 <img src="images/Liberal_Party_of_Australia_logo_1920x1565.svg.png" alt="Liberals">
                 <svg class="icon-x" viewBox="0 0 24 24" fill="none" stroke-width="4"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
             </div>
-            <p>Polluting, unsustainable, expensive dependence on coal, gas and
-             <br>foreign petrol corporations</p>
+            <p>Even higher costs and dangerous dependence on unsustainable coal, gas, and imported petrol</p>
         </div>
 
         <!-- Section 3 - The Card -->
