--- a/index.html
+++ b/index.html
@@ -137,12 +137,11 @@
     <li>Upgrade public transport with electrification and increase the number and frequency of services.</li>
     <li>Oppose new wasteful spending by political parties like Labor's $285 million failed hydrogen project. Get the priorities right.</li>
     <li>Use State Parliament to call out the federal government on all of their failures, including indadequate funding for the states, extreme growth, pollution and rising prices, and advocate for central bank reform</li>
+    <li>Lead a movement to make parliament more competent at both state and federal levels</li>
 </ul>
 
-<p>Even better though, I have a plan to make parliament more competent at both state and federal levels, and I need your help.</p>
-
 <p>Watch a few of my videos or skim through my website and decide for yourself which candidate has the problem-solving skills and analytical skills that are most lacking from parliament.
-<br>If you think that's me, then I'd appreciate your support as your Independent for Waite.</p>
+<br>If you think that's me, I'd appreciate your support as your Independent for Waite.</p>
 
 <h2>InDaily article</h2>
 
