--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ The most important ideas behind my campaign are explained in the 90-second video
 
 <ul>
     <li>Create a PBS-like system that regulates prices down when profit margins are high on a broad range of essentials, or negotiates a price limit in exchange for a subsidy and a zero-interest loan for home and vehicle efficiency upgrades.</li>
-    <li>Regulate against the destruction of our beautiful homes, gardens, surroundings and environment, and blocking out of views of nature by lower quality housing.</li>
+    <li>Regulate against the destruction of our beautiful homes, gardens, surroundings and environment, and obstruction of views of nature by lower quality housing.</li>
     <li>Make our algae science independent from polluting industries. Currently there are conflicts of interest.</li>
     <li>Upgrade public transport with electrification and increase the number and frequency of services.</li>
     <li>Oppose new wasteful spending by political parties like Labor's 200-million-dollar failed hydrogen project.</li>
@@ -548,6 +548,8 @@ The most important ideas behind my campaign are explained in the 90-second video
  </ul>
 
 <h3 id="COL">Cost of Living</h3>
+
+<iframe width="388" height="690" src="https://www.youtube.com/embed/d3R6HlIBcJ0" title="Why not do for other essentials what we do with the PBS?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 <h4 id="1.1_Efficiency_Loans">Reduce bills by providing zero-interest loans and subsidies for efficiency upgrades including solar water heating and electrification at regulated prices<br>
  <small>(1.1_Efficiency_Loans)</small>
