--- a/index.html
+++ b/index.html
@@ -815,6 +815,10 @@ The most important ideas behind my campaign are explained in the 90-second video
 
 <p>The South Australian Employment Service (SAES) detailed above will reduce the demand for skilled workers to move to South Australia, reduce the need for state-sponsored skilled visas, and reduce the demand for the federal government to hand out other skilled visas. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
 
+<p>Immigration is not solving the problem of the aging population, because most immigratns are adults, and includes eldery family of skilled workers. In fact, immigration only worsens the problem of low birth rates. This can only be solved if we
+ 
+<p>11.4 Support competent adults with parenting.</p>
+
 <h3>Policing</h3>
 
  <h4 id="12.0_Police_Support">Solve the police staffing crisis<br>
